[package]
name = "attack-scheduler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = {version = "0.4.5", features = ["experimental-wasm", "lazy-function-tables"]}

[features]
nothreads = ["godot/experimental-wasm-nothreads"]

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
